--- a/index.html
+++ b/index.html
@@ -80,10 +80,13 @@
               <a href="#about"><b>About</b></a>
             </li>
             <li>
-              <a href="#landscaping"><b>Service</b></a>
+              <a href="gallery/projects.html"><b>Gallery</b></a>
             </li>
             <li>
-              <a href="gallery/projects.html"><b>Gallery</b></a>
+              <a style="min-width: 50px" href="#landscaping"><b>Service</b></a>
+            </li>
+            <li>
+              <a href="#estimation"><b>Contact us</b></a>
             </li>
           </ul>
         </nav>
@@ -117,17 +120,17 @@
           <center>
             <h1 class="major">Service</h1>
             <ul style="text-align: left">
-              <li>Tonte de gazon</li>
-              <li>Taille de haies et arbustes</li>
-              <li>Coupe de bordures de gazon</li>
-              <li>Ramassage des feuilles et débris</li>
-              <li>Entretien des plates bandes</li>
-              <li>Ouverture et fermeture de terrain</li>
+              <li>Lawn mowing</li>
+              <li>Trimming of hedges and shrubs</li>
+              <li>Cutting of lawn edges</li>
+              <li>Picking up leaves and debris</li>
+              <li>Maintenance of flowerbeds</li>
+              <li>Opening and closing of land</li>
               <li>
-                Balais mécanique pour nettoyage printanier de gravel (stationnement et entrée
-                privée)
+                Mechanical brooms for spring cleaning of gravel (parking and private entrance)
               </li>
             </ul>
+            <button id="btnMap" onclick="displayMap()">Show Map</button>
             <div
               id="map_canvas"
               style="width: 400px; height: 300px; border-radius: 5px; margin-bottom: 10px"
@@ -192,6 +195,55 @@
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
 
+    <style type="text/css">
+      #map_canvas {
+        display: none;
+      }
+    </style>
+
+    <script>
+      function displayMap() {
+        document.getElementById('map_canvas').style.display = 'block';
+        document.getElementById('btnMap').style.display = 'none';
+        initialize();
+      }
+
+      function initialize() {
+        // create the map
+        var myOptions = {
+          zoom: 10,
+          center: new google.maps.LatLng(45.599917, -73.583289),
+          mapTypeId: google.maps.MapTypeId.ROADMAP,
+        };
+
+        map = new google.maps.Map(document.getElementById('map_canvas'), myOptions);
+
+        var marker = new google.maps.Marker({
+          position: { lat: 45.599917, lng: -73.583289 },
+          map: map,
+          title: 'Groupe Atlanta',
+        });
+
+        const flightPlanCoordinates = [
+          { lat: 45.55179539091031, lng: -73.53537650249416 },
+          { lat: 45.59697554388466, lng: -73.64249320171291 },
+          { lat: 45.68242987045758, lng: -73.65897269390041 },
+          { lat: 45.693941831318185, lng: -73.48044486186916 },
+          { lat: 45.55179539091031, lng: -73.53537650249416 },
+        ];
+
+        const flightPath = new google.maps.Polyline({
+          path: flightPlanCoordinates,
+          geodesic: true,
+          strokeColor: '#FF0000',
+          strokeOpacity: 1.0,
+          strokeWeight: 2,
+        });
+
+        flightPath.setMap(map);
+      }
+    </script>
+
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-ljTOCCgZZlyDuu2xVR_pdV9QHiz2zfk&callback=myMap"
       async
@@ -199,42 +251,5 @@
     ></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-ljTOCCgZZlyDuu2xVR_pdV9QHiz2zfk&callback=myMap"></script>
-
-    <script>
-      document.getElementById('map_canvas').style.display = 'block';
-
-      // create the map
-      var myOptions = {
-        zoom: 10,
-        center: new google.maps.LatLng(45.599917, -73.583289),
-        mapTypeId: google.maps.MapTypeId.ROADMAP,
-      };
-
-      map = new google.maps.Map(document.getElementById('map_canvas'), myOptions);
-
-      var marker = new google.maps.Marker({
-        position: { lat: 45.599917, lng: -73.583289 },
-        map: map,
-        title: 'A1 Gazon',
-      });
-
-      const flightPlanCoordinates = [
-        { lat: 45.55179539091031, lng: -73.53537650249416 },
-        { lat: 45.59697554388466, lng: -73.64249320171291 },
-        { lat: 45.68242987045758, lng: -73.65897269390041 },
-        { lat: 45.693941831318185, lng: -73.48044486186916 },
-        { lat: 45.55179539091031, lng: -73.53537650249416 },
-      ];
-
-      const flightPath = new google.maps.Polyline({
-        path: flightPlanCoordinates,
-        geodesic: true,
-        strokeColor: '#FF0000',
-        strokeOpacity: 1.0,
-        strokeWeight: 2,
-      });
-
-      flightPath.setMap(map);
-    </script>
   </body>
 </html>
