--- a/fr.html
+++ b/fr.html
@@ -82,16 +82,14 @@
               <a href="#about"><b>À propos</b></a>
             </li>
             <li>
+              <a href="#service"><b>Service</b></a>
+            </li>
+            <li>
               <a href="gallery/projectsfr.html"><b>Galerie</b></a>
             </li>
             <li>
-              <a style="min-width: 50px" href="#service"><b>Service</b></a>
+              <a style="padding: 0 0.2rem 0 0.2rem" href="#estimation"><b>Nos joindre</b></a>
             </li>
-            <li>
-              <a href="#estimation"><b>Nos joindre</b></a>
-            </li>
-            <!-- <li><a href="#info"><b>Info</b></a></li> -->
-            <!-- <li><a href="#testimonials"><b>Testimonials</b></a></li> -->
           </ul>
         </nav>
       </header>
@@ -115,7 +113,7 @@
             <img
               src="images/about.jpg"
               alt=""
-              style="height: 200px; width: 375px; border-radius: 5px"
+              style="max-width: 90%; height: auto; border-radius: 5px"
             />
           </center>
         </article>
@@ -136,20 +134,27 @@
                 privée)
               </li>
             </ul>
-            <button id="btnMap" onclick="displayMap()">Show Map</button>
-            <div
-              id="map_canvas"
-              style="width: 400px; height: 300px; border-radius: 5px; margin-bottom: 10px"
-            ></div>
+            <iframe
+              src="https://www.google.com/maps/d/embed?mid=1WcM2ftsNRxuz-THLLC-8TbWO1FcdCj0&ehbc=2E312F&z=11"
+              width="280"
+              height="350"
+              class="map_mobile"
+            ></iframe>
+            <iframe
+              src="https://www.google.com/maps/d/embed?mid=1WcM2ftsNRxuz-THLLC-8TbWO1FcdCj0&ehbc=2E312F&z=11"
+              width="550"
+              height="400"
+              class="map_desktop"
+            ></iframe>
           </center>
         </article>
 
         <!-- Estimation -->
         <article id="estimation">
-          <center><h1 class="major">Obtenir une soumission</h1></center>
+          <center><h1 class="major">Nos Joindre</h1></center>
           <p>
             Pour nous contacter, veuillez nous appeler au
-            <strong>514-297-5594</strong> ou nous envoyer un message en utilisant ce formulaire
+            <strong>514-297-5594</strong> ou nous envoyer un message en utilisant ce formulaire:
           </p>
           <form method="post" action="https://formspree.io/f/xgebvwwk">
             <div class="field half first">
@@ -207,60 +212,24 @@
     <script src="assets/js/main.js"></script>
 
     <style type="text/css">
-      #map_canvas {
+      .map_desktop {
         display: none;
+        border-radius: 5px;
+      }
+
+      .map_mobile {
+        display: block;
+        border-radius: 5px;
+      }
+
+      @media screen and (min-width: 600px) {
+        .map_desktop {
+          display: block;
+        }
+        .map_mobile {
+          display: none;
+        }
       }
     </style>
-
-    <script>
-      function displayMap() {
-        document.getElementById('map_canvas').style.display = 'block';
-        document.getElementById('btnMap').style.display = 'none';
-        initialize();
-      }
-
-      function initialize() {
-        // create the map
-        var myOptions = {
-          zoom: 10,
-          center: new google.maps.LatLng(45.599917, -73.583289),
-          mapTypeId: google.maps.MapTypeId.ROADMAP,
-        };
-
-        map = new google.maps.Map(document.getElementById('map_canvas'), myOptions);
-
-        var marker = new google.maps.Marker({
-          position: { lat: 45.599917, lng: -73.583289 },
-          map: map,
-          title: 'Groupe Atlanta',
-        });
-
-        const flightPlanCoordinates = [
-          { lat: 45.55179539091031, lng: -73.53537650249416 },
-          { lat: 45.59697554388466, lng: -73.64249320171291 },
-          { lat: 45.68242987045758, lng: -73.65897269390041 },
-          { lat: 45.693941831318185, lng: -73.48044486186916 },
-          { lat: 45.55179539091031, lng: -73.53537650249416 },
-        ];
-
-        const flightPath = new google.maps.Polyline({
-          path: flightPlanCoordinates,
-          geodesic: true,
-          strokeColor: '#FF0000',
-          strokeOpacity: 1.0,
-          strokeWeight: 2,
-        });
-
-        flightPath.setMap(map);
-      }
-    </script>
-
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-ljTOCCgZZlyDuu2xVR_pdV9QHiz2zfk&callback=myMap"
-      async
-      defer
-    ></script>
-
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD-ljTOCCgZZlyDuu2xVR_pdV9QHiz2zfk&callback=myMap"></script>
   </body>
 </html>
