Added service area

--- a/en.html
+++ b/en.html
@@ -9,7 +9,7 @@
     <title>A1 Gazon</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="description" content="Aménagement paysager" />
+    <meta name="description" content="Landscaping" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="icon" href="images/favicon.ico" type="image/png" />
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -39,7 +39,7 @@
             margin-top: 0px;
           "
         >
-          Appelez-nous au: 514-297-5594</a
+          Call now: 514-297-5594</a
         >
 
         <a
@@ -59,7 +59,7 @@
             margin-top: 0px;
           "
         >
-          English</a
+          Français</a
         >
       </footer>
 
@@ -67,28 +67,26 @@
       <header id="header">
         <div class="content">
           <div class="inner">
-            <img src="images/a1.png" alt="" class="main-logo" />
-            <!-- <p style="margin: 0px">
-              <strong>Aménagement paysager</strong>
-            </p> -->
+            <img src="images/a1.png" alt="" class="main-logo animated pulse delay-3s" />
+            <p style="margin: 0px"><strong></strong></p>
           </div>
         </div>
         <a href="#estimation" class="animated jello delay-5s"
-          ><b><p id="qoute">Obtenir une soumission</p></b></a
+          ><b><p id="qoute">Request a quote</p></b></a
         >
         <nav>
           <ul id="menu">
             <li>
-              <a href="#about"><b>À propos</b></a>
+              <a href="#about"><b>About</b></a>
+            </li>
+            <li style="min-width: 50px">
+              <a href="#landscaping"><b>Service</b></a>
             </li>
             <li>
-              <a href="#service"><b>Service</b></a>
+              <a href="gallery/projects.html"><b>Gallery</b></a>
             </li>
             <li>
-              <a href="gallery/projectsfr.html"><b>Galerie</b></a>
-            </li>
-            <li>
-              <a style="padding: 0 0.2rem 0 0.2rem" href="#estimation"><b>Nos joindre</b></a>
+              <a href="#estimation"><b>Contact</b></a>
             </li>
           </ul>
         </nav>
@@ -99,16 +97,15 @@
         <!-- About -->
         <article id="about">
           <center>
-            <h1 class="major">À propos</h1>
-            <p>
-              A1 Gazon fournit des services d’entretien de votre pelouse et terrain depuis 2015. Ce
-              qui nous a fait croître exponentiellement depuis, c’est la distinction de notre
-              service de qualité supérieure, notre écoute et notre devoir de satisfaire chacun de
-              nos client(e)s. Nous vous assurons la paix d’esprit de ces tâches qui surchargent vos
-              horaires occupés du quotidien. Notre équipe professionnelle et dynamique, effectue les
-              travaux d’entretien avec minutie, efficacité et respect de votre environnement. Nous
-              sommes fiers des valeurs de notre entreprise. A1 Gazon se spécialise dans les services
-              d’entretien des terrains résidentiels et commerciaux.
+            <h1 class="major">About</h1>
+            <p style="text-align: left">
+              A1 Gazon has been providing your lawn and garden maintenance services since 2015. What
+              has made us grow exponentially since then, is the distinction of our superior service,
+              our attentiveness and our duty to satisfy each of our customers. We assure you peace
+              of mind from those tasks that overload your busy daily schedule. Our professional and
+              dynamic team performs maintenance work with meticulousness, efficiency and respect of
+              your environment. We are proud of our company's values. A1 Gazon specializes in
+              residential and commercial maintenance services.
             </p>
             <img
               src="images/about.jpg"
@@ -119,19 +116,19 @@
         </article>
 
         <!-- Interior -->
-        <article id="service">
+        <article id="landscaping">
           <center>
             <h1 class="major">Service</h1>
-            <ul style="text-align: left">
-              <li>Tonte de gazon</li>
-              <li>Taille de haies et arbustes</li>
-              <li>Coupe de bordures de gazon</li>
-              <li>Ramassage des feuilles et débris</li>
-              <li>Entretien des plates bandes</li>
-              <li>Ouverture et fermeture de terrain</li>
+
+            <ul style="text-align: left; max-width: 90%">
+              <li>Lawn mowing</li>
+              <li>Trimming of hedges and shrubs</li>
+              <li>Cutting of lawn edges</li>
+              <li>Picking up leaves and debris</li>
+              <li>Maintenance of flowerbeds</li>
+              <li>Opening and closing of land</li>
               <li>
-                Balais mécanique pour nettoyage printanier de gravel (stationnement et entrée
-                privée)
+                Mechanical brooms for spring cleaning of gravel (parking and private entrance)
               </li>
             </ul>
             <iframe
@@ -146,24 +143,29 @@
               height="400"
               class="map_desktop"
             ></iframe>
+            <br />
+            <span style="text-align: left; text-decoration: underline; font-weight: bold"
+              >Service Area:</span
+            >
+            <p style="font-size: 14px">
+              Anjou, Montréal-Est, Montréal-Nord, Nouveau-Rosemont, Pointe-aux-Trembles,
+              Rivière-des-Prairies, Rosemont-La Petite-Patrie, Saint-Léonard and Tétreaultville
+            </p>
           </center>
         </article>
 
         <!-- Estimation -->
         <article id="estimation">
-          <center><h1 class="major">Nos Joindre</h1></center>
-          <p>
-            Pour nous contacter, veuillez nous appeler au
-            <strong>514-297-5594</strong> ou nous envoyer un message en utilisant ce formulaire:
-          </p>
+          <center><h1 class="major">Contact Us</h1></center>
+          <p>To get in touch with us send us a message using this form:</p>
           <form method="post" action="https://formspree.io/f/xgebvwwk">
             <div class="field half first">
-              <label for="name">Nom</label>
+              <label for="name">Name</label>
               <input type="text" name="first name" id="name" />
             </div>
             <br />
             <div class="field half">
-              <label for="email">Couriel</label>
+              <label for="email">Email</label>
               <input type="text" name="email" id="email" />
             </div>
             <br />
@@ -173,9 +175,7 @@
             </div>
             <br />
             <ul class="actions">
-              <li>
-                <input type="submit" value="Envoyer" class="special" />
-              </li>
+              <li><input type="submit" value="Send" class="special" /></li>
             </ul>
           </form>
         </article>
@@ -183,7 +183,7 @@
 
       <!-- Footer -->
       <footer id="footer">
-        <ul class="icons">
+        <!-- <ul class="icons">
           <li>
             <a href="https://www.facebook.com/" class="icon brands fa-facebook-f"
               ><span class="label">Facebook</span></a
@@ -194,7 +194,7 @@
               ><span class="label">Instagram</span></a
             >
           </li>
-        </ul>
+        </ul> -->
         <p class="copyright">
           <strong>&copy; A1 Gazon</strong>
         </p>
