--- a/en.html
+++ b/en.html
@@ -180,7 +180,7 @@
             <br />
             <div class="field half">
               <label for="email">Email</label>
-              <input type="text" name="email" id="email" />
+              <input type="email" name="email" id="email" />
             </div>
             <br />
             <div class="field half">
@@ -269,7 +269,7 @@
             }
           }
         }
-        window.setInterval(changeImage, 5000);
+        window.setInterval(changeImage, 6500);
       };
     </script>
 
