--- a/gallery/projects.html
+++ b/gallery/projects.html
@@ -31,10 +31,10 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><strong>A1 Gazon</strong></a></h1>
+						<h1><a href="../en.html"><strong>A1 Gazon</strong></a></h1>
 						<nav>
 							<ul>
-								<li><a href="../index.html" class="icon solid fa-arrow-circle-left">Back</a></li>
+								<li><a href="../en.html" class="icon solid fa-arrow-circle-left">Back</a></li>
 							</ul>
 						</nav>
 					</header>
