--- a/gallery/projectsfr.html
+++ b/gallery/projectsfr.html
@@ -31,10 +31,10 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><strong>A1 Gazon</strong></a></h1>
+						<h1><a href="../index.html"><strong>A1 Gazon</strong></a></h1>
 						<nav>
 							<ul>
-								<li><a href="../fr.html" class="icon solid fa-arrow-circle-left">Retour</a></li>
+								<li><a href="../index.html" class="icon solid fa-arrow-circle-left">Retour</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -86,7 +86,7 @@
 							
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
+							<a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/13.jpg" alt="" /></a>
 						</article>
 						<!-- <article class="thumb">
 							<a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/13.jpg" alt="" /></a>
