Updated the email

--- a/en.html
+++ b/en.html
@@ -86,7 +86,7 @@
               <a href="gallery/projects.html"><b>Gallery</b></a>
             </li>
             <li>
-              <a href="#estimation"><b>Contact</b></a>
+              <a href="#contact"><b>Contact</b></a>
             </li>
           </ul>
         </nav>
@@ -163,15 +163,11 @@
 
         <!-- Estimation -->
         <article id="estimation">
-          <center><h1 class="major">Contact Us</h1></center>
+          <center><h1 class="major">Estimation</h1></center> 
           <p>
-            <b>Phone:</b> 1-514-996-1221
-            <br />
-            <b>Email:</b> info@a1gazon.com <br />
-            <b>Hours:</b> Monday - Friday (8am to 5pm)
-          </p>
-
-          <p>To get in touch with us send us a message using this form:</p>
+          Call       
+          <a href="tel:1-514-996-1221">514-996-1221</a>
+          or send us a message using the form below:</p>
           <form method="post" action="https://formspree.io/f/xgebvwwk">
             <div class="field half first">
               <label for="name">Name</label>
@@ -220,6 +216,22 @@
               <li><input type="submit" value="Send" class="special" /></li>
             </ul>
           </form>
+        </article>
+
+        <article id="contact">
+          <center><h1 class="major">Contact Us</h1></center>
+          <center>
+            <b>Phone:</b> 1-514-996-1221
+            <br />
+            <b>Email:</b> info@a1gazon.com <br /> <br />
+            <b>Hours:</b>  <br />
+            Monday (8am to 5pm) <br />
+            Tuesday (8am to 5pm) <br />
+            Wednesday (8am to 5pm) <br />
+            Thursday (8am to 5pm) <br />
+            Friday (8am to 5pm) <br />
+            Saturday (9am to 2pm)
+          <center>
         </article>
       </div>
 
