--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <a href="gallery/projectsfr.html"><b>Galerie</b></a>
             </li>
             <li>
-              <a style="padding: 0 0.2rem 0 0.2rem" href="#estimation"><b>Nos joindre</b></a>
+              <a style="padding: 0 0.2rem 0 0.2rem" href="#contact"><b>Nous joindre</b></a>
             </li>
           </ul>
         </nav>
@@ -166,15 +166,10 @@
 
         <!-- Estimation -->
         <article id="estimation">
-          <center><h1 class="major">Nos Joindre</h1></center>
+          <center><h1 class="major">Soumission</h1></center>
 
-          <p>
-            <b>Téléphone:</b> 1-514-996-1221
-            <br />
-            <b>Courriel:</b> info@a1gazon.com <br />
-            <b>Heures:</b> Lundi - Vendredi (8am to 5pm)
-          </p>
-
+          <b>Téléphone:</b> 1-514-996-1221
+          </br>
           <p>Pour nous contacter, nous envoyer un message en utilisant ce formulaire:</p>
           <form method="post" action="https://formspree.io/f/xgebvwwk">
             <div class="field half first">
@@ -183,7 +178,7 @@
             </div>
             <br />
             <div class="field half">
-              <label for="email">Couriel</label>
+              <label for="email">Courriel</label>
               <input type="text" name="email" id="email" />
             </div>
             <br />
@@ -202,14 +197,16 @@
               <div class="select-wrapper">
                 <select name="category" id="demo-category">
                   <option value="">-</option>
-                  <option value="lawn_mowing">Lawn mowing</option>
-                  <option value="trimming_hedges_shrubs">Trimming of hedges and shrubs</option>
-                  <option value="cutting_lawn_edges">Cutting of lawn edges</option>
-                  <option value="picking_up_leaves">Picking up leaves and debris</option>
-                  <option value="meantenance_flowerbeds">Maintenance of flowerbeds</option>
-                  <option value="open_closing">Opening and closing of land</option>
+
+                  <option value="lawn_mowing">Tonte de gazon</option>
+                  <option value="trimming_hedges_shrubs">Taille de haies et arbustes</option>
+                  <option value="cutting_lawn_edges">Coupe de bordures de gazon</option>
+                  <option value="picking_up_leaves">Ramassage des feuilles et débris</option>
+                  <option value="meantenance_flowerbeds">Entretien des plates bandes</option>
+                  <option value="open_closing">Ouverture et fermeture de terrain</option>
                   <option value="mechanical_brooms">
-                    Mechanical brooms for spring cleaning of gravel (parking and private entrance)
+                    Balais mécanique pour nettoyage printanier de gravel (stationnement et entrée
+                    privée)
                   </option>
                 </select>
               </div>
@@ -226,6 +223,26 @@
               </li>
             </ul>
           </form>
+        </article>
+
+        <article id="contact">
+          <center><h1 class="major">Nous Joindre</h1></center>
+          <center>
+
+  
+          <p>
+            <b>Téléphone:</b> 1-514-996-1221
+            <br />
+            <b>Courriel:</b> info@a1gazon.com <br /> <br />
+            <b>Hours:</b>  <br />
+            Lundi (8h à 17h) <br />
+            Mardi (8h à 17h) <br />
+            Mercredi (8h à 17h) <br />
+            Jeudi (8h à 17h) <br />
+            Vendredi (8h à 17h) <br />
+            Samedi (9h à 14h)
+          </p>
+        </center>
         </article>
       </div>
 
